--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flutter_foreground_task: ^6.5.0
   shared_preferences: ^2.2.3
   provider: ^6.1.2
+  readsms: ^0.1.0+3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
