--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -35,9 +35,9 @@
             </intent-filter>
         </activity>
         <service
-            android:name="com.pravera.flutter_foreground_task.service.ForegroundService"
+            android:name="id.flutter.flutter_background_service.BackgroundService"
             android:foregroundServiceType="dataSync|remoteMessaging"
-            android:exported="false" />
+        />
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
