--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,12 @@ dependencies:
       url: https://github.com/EddieKamau/sms_advanced.git
       ref: master
   ntfluttery: ^0.1.1
-  flutter_foreground_task: ^6.5.0
   shared_preferences: ^2.2.3
   provider: ^6.1.2
   readsms: ^0.1.0+3
   permission_handler: ^11.3.1
+  flutter_background_service: ^5.0.6
+  flutter_local_notifications: ^17.2.1+1
 
 dev_dependencies:
   flutter_test:
